[F] Fixed Bug: Overlapping Button Values

--- a/css/style.css
+++ b/css/style.css
@@ -277,11 +277,17 @@ p {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1); }
 
 .button-wrapper::before {
-  content: '';
+  content: attr(data-hover);
+  color: #3A3C40;
+  font-size: 1.25em;
+  padding: 15px;
+  text-transform: uppercase;
+  font-family: "Pathway Gothic One", sans-serif;
+  font-weight: bold;
   position: absolute;
   top: 0;
   left: 0;
-  width: 150%;
+  width: 100%;
   height: 100%;
   z-index: 0;
   -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
@@ -330,6 +336,9 @@ input[type="text"]:focus {
 #mc-indicates-required {
   display: none; }
 
+#mc_signup_submit {
+  margin: 0 !important; }
+
 .mc_var_label {
   font-family: "Pathway Gothic One", sans-serif;
   color: #DFDFDF; }
@@ -357,12 +366,14 @@ footer {
   display: none; }
 
 @media screen and (max-width: 600px), (max-device-width: 1024px) {
-  #overlay .mission {
-    width: 100% !important; }
-  #overlay .valigner {
-    display: none !important; }
-  #overlay iframe {
-    width: 100%; }
+  #overlay {
+    background: none; }
+    #overlay .mission {
+      width: 100% !important; }
+    #overlay .valigner {
+      display: none !important; }
+    #overlay iframe {
+      width: 100%; }
 
   .mc_merge_var {
     width: 100%;
