--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -333,12 +333,19 @@ main {
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
+
 .button-wrapper::before {
-	content: '';
+	content: attr(data-hover);
+    color: $colorBackground;
+    font-size: 1.25em;
+    padding: 15px;
+    text-transform: uppercase;
+    font-family: $mainFont;
+    font-weight: bold;
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 150%;
+	width: 100%;
 	height: 100%;
 	z-index: 0;
 	-webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
@@ -386,6 +393,10 @@ input[type="text"]:focus {
     display: none;
 }
 
+#mc_signup_submit {
+    margin: 0 !important;
+}
+
 .mc_var_label {
     font-family: $mainFont;
     color: $colorTextSecondary;
@@ -424,6 +435,7 @@ footer {
 
 @media screen and (max-width: 600px), (max-device-width: 1024px) {
     #overlay {
+        background: none;
         
         .mission {
             width: 100% !important;
